src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Diagnosis Verification Support Process</fullName>
        <description>This Support process is used to display the values for Diagnosis Verification record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved - Chapter Medical Advisor</fullName>
        </values>
        <values>
            <fullName>Approved - Chapter Staff</fullName>
        </values>
        <values>
            <fullName>Approved - National Medical Council</fullName>
        </values>
        <values>
            <fullName>Approved - National Staff</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>DNQ - Chapter Medical Advisor</fullName>
        </values>
        <values>
            <fullName>DNQ - Chapter Staff</fullName>
        </values>
        <values>
            <fullName>DNQ - National Medical Council</fullName>
        </values>
        <values>
            <fullName>DNQ - National Staff</fullName>
        </values>
        <values>
            <fullName>Eligibility Review Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Parent Wish Support process</fullName>
        <description>This support process used to assign with parent wishes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Budget Approval</fullName>
        </values>
        <values>
            <fullName>Budget Approval - Approved</fullName>
        </values>
        <values>
            <fullName>Budget Approval - Submitted</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>DNQ</fullName>
        </values>
        <values>
            <fullName>Granted</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Assign</fullName>
        </values>
        <values>
            <fullName>Ready to Interview</fullName>
        </values>
        <values>
            <fullName>Wish Design</fullName>
        </values>
        <values>
            <fullName>Wish Determined</fullName>
        </values>
        <values>
            <fullName>Wish Scheduled</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Absent_Parent_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Absent parent form</description>
        <label>Absent Parent Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Wish_Granter__c</fullName>
        <description>It holds the Wish Granter of who is currrently working on the child.</description>
        <label>Active Wish Granter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Cash__c</fullName>
        <description>This field contains sum of Actual cash from wish expense.</description>
        <label>Actual Cash</label>
        <summarizedField>Wish_Expense__c.Actual_Cash__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Departure_Date__c</fullName>
        <description>This field is used to capture the actual departure date</description>
        <label>Actual Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Inkind__c</fullName>
        <description>This field contains sum of actual inkin from wish expense.</description>
        <label>Actual Inkind</label>
        <summarizedField>Wish_Expense__c.Actual_In_Kind__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Return_Date__c</fullName>
        <description>This field is used to capture the actual return date</description>
        <label>Actual Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Total__c</fullName>
        <description>Contains the actual cost of budget</description>
        <formula>Actual_Cash__c +  Actual_Inkind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Interview_Date1__c</fullName>
        <description>It holds the Additional Available Interview Date1</description>
        <label>Additional Interview Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Interview_date2__c</fullName>
        <description>It holds the Additional Available Interview Date2</description>
        <inlineHelpText>Date the wish child is interviewed an additional time, if needed</inlineHelpText>
        <label>Additional Interview Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Requests__c</fullName>
        <description>It holds the wish child additional requests</description>
        <label>Additional Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adoptable__c</fullName>
        <description>Used to hold adaptable picklist values</description>
        <label>Adoptable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check with Wish Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adopted_By__c</fullName>
        <description>Used to hold the name of adopted person</description>
        <label>Adopted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adopted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to define whether the wish is adopted</description>
        <label>Adopted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>This field is used to capture the age.</description>
        <formula>IF( NOT( ISBLANK( Birthdate__c) ) ,
  IF( DATE( 2000 , MONTH( Birthdate__c) , DAY( Birthdate__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate__c),
     YEAR (Today()) - YEAR ( Birthdate__c) -1 ),
  null)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Travel_Details__c</fullName>
        <description>This field is used to hold the wish child&apos;s air travel details</description>
        <inlineHelpText>Select the statement that applies to this wish.</inlineHelpText>
        <label>Air Travel Details</label>
        <picklist>
            <picklistValues>
                <fullName>This wish does not involve air travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am fully aware of the medical research regarding air travel and feel it is appropriate for this child. I will make any necessary adjustments to the medical treatment plan prior to their travel dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not support air travel for this child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_requested_wish_participants_reside_w__c</fullName>
        <description>It describes whether all requested wish participants resides with wish child?</description>
        <label>All Participants Reside With Wish Child</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnticipatedStart_Date__c</fullName>
        <description>This field  will have the same value as it&apos;s Parent&apos;s Start date</description>
        <formula>Parent.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <inlineHelpText>Approximate date when the wish might occur  (flexible)</inlineHelpText>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Any_impact_your_ability_to_join_wish__c</fullName>
        <description>It  captures the details of  participant situation</description>
        <inlineHelpText>Is there anything on your family’s calendar (upcoming medical treatments, school or work commitments,
planned vacations, etc.) that might impact your ability to participate in a wish?</inlineHelpText>
        <label>Any Impact Your Ability To Join Wish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appropriate_Comments__c</fullName>
        <description>This field is used to store appropriate value from wish clearance form</description>
        <inlineHelpText>The following medical restrictions and needs must be considered when fulfilling the wish.</inlineHelpText>
        <label>Appropriate Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>This field is used to capture the wish assigned date</description>
        <inlineHelpText>Date that the volunteers were assigned to the wish child&apos;s file</inlineHelpText>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Automobile_insurance_provide_coverage__c</fullName>
        <description>It capture details about automobile insurance coverage for a rental car</description>
        <inlineHelpText>Does your automobile insurance provide coverage while using a rental car?</inlineHelpText>
        <label>Automobile Insurance Provide Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability2__c</fullName>
        <description>It indicate time periods in which your family will have the greatest availability for
fulfilment  the wish.</description>
        <label>Availability Time Period 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability3__c</fullName>
        <description>It indicates the time periods in which your family will have the greatest availability for 
fulfilment of the wish.</description>
        <label>Availability Time Period 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_1__c</fullName>
        <description>It indicates the time periods in which your family will have the greatest availability
for fulfilment  the wish.</description>
        <label>Availability Time Period 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>It will holds the wish child birthday date.</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bringing_Own_Wheel_Chair__c</fullName>
        <description>It defines, participants who bring their own wheel chair.</description>
        <label>Bringing Own Wheelchair</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Approval_Status__c</fullName>
        <description>This field is used to capture the status of the budget page</description>
        <label>Budget Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Approved_Date__c</fullName>
        <description>It is used to capture the approved date of the budget</description>
        <inlineHelpText>Date the submitted budget is approved</inlineHelpText>
        <label>Budget Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Cash__c</fullName>
        <description>This field contains sum of Budget cash from wish expense.</description>
        <label>Budget Cash</label>
        <summarizedField>Wish_Expense__c.Budget_Cash__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Inkind__c</fullName>
        <description>This field contains the sum of budget inkind from wish expense.</description>
        <label>Budget Inkind</label>
        <summarizedField>Wish_Expense__c.Budget_In_Kind__c</summarizedField>
        <summaryForeignKey>Wish_Expense__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Notes__c</fullName>
        <description>Use for storing budget notes.</description>
        <label>Budget Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <description>This will indicate whether budget is approved or pending.</description>
        <label>Budget Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Submitted_Date__c</fullName>
        <description>It is used to capture the submitted date of the budget</description>
        <inlineHelpText>Date the staff submits the budget for approval</inlineHelpText>
        <label>Budget Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <description>The total Budget for wish</description>
        <formula>Budget_Cash__c   +   Budget_Inkind__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <description>This field update is used to update case comment field on case when ever the case comment is created</description>
        <label>Hidden Case Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Member_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It  displays the total number of case team member added to the case.</description>
        <label>Hidden Case Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_ThreadId__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Case ThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChapterName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the state name</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>ChapterName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_MACEmail__c</fullName>
        <description>This field is used to store the MAC email address.</description>
        <label>Hidden Chapter MACEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Chapter_Medical_Advisor_Phone__c</fullName>
        <description>This Field is Used to populate the Medical Contact values from Contact.</description>
        <label>Chapter Medical Advisor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CheckedInFamily__c</fullName>
        <description>Used to hold the value of checked In Date</description>
        <label>CheckedInFamily</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_MedicalSummary_LastModifiedDate__c</fullName>
        <description>It is used to capture the recent modified date of medical summary</description>
        <label>Child Medical Summary Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Wish_Clearance_Last_Modified_Date__c</fullName>
        <description>It is used to capture the wish clearance recent modified date</description>
        <label>Child Wish Clearance Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_s_Medical_Summary_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify the child&apos;s medical summary form</description>
        <label>Child’s Medical Summary Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_s_Medical_Summary_received_date__c</fullName>
        <description>It is used to capture the medical summary received date</description>
        <inlineHelpText>Date the staff receives the Child&apos;s Medical Summary from the medical professional</inlineHelpText>
        <label>Child&apos;s Medical Summary Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_s_Medical_Summary_sent__c</fullName>
        <description>Medical summary sent date</description>
        <inlineHelpText>Date the staff submits the Child&apos;s Medical Summary to the medical professional</inlineHelpText>
        <label>Child&apos;s Medical Summary Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>This field is used to capture the closed date of case</description>
        <inlineHelpText>Date the wish is financially closed out</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comment_1__c</fullName>
        <description>It will holds values from wish clearance form</description>
        <inlineHelpText>These comments apply to the statement above.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_2__c</fullName>
        <description>It will holds values from wish clearance form</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_for_PWL_Not_Met__c</fullName>
        <description>This field is used to capture the detail notes about the PWL</description>
        <label>Comment for PWL Not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>It will holds values from wish clearance form</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to hold the communication profile</description>
        <label>Communication Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>It is used to capture the wish completed date</description>
        <inlineHelpText>Date the wish is considered granted</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Approval_Date__c</fullName>
        <description>It is used to capture the concept approval date</description>
        <inlineHelpText>Date the chapter reviews and approves the wish concept</inlineHelpText>
        <label>Concept Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Anticipated_Start_Date__c</fullName>
        <description>Copy 1 of Anticipated Start Date Needed for Reporting</description>
        <formula>Anticipated_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Assigned_Date__c</fullName>
        <description>Copy 1 of Assigned Date needed for reporting</description>
        <formula>Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Budget_Approved_Date__c</fullName>
        <description>Copy 1 of Budget Approved Date Needed for Reporting</description>
        <formula>Budget_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Budget Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Closed_Date__c</fullName>
        <description>Copy 1 of Closed Date Needed for Reporting</description>
        <formula>Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Completed_Date__c</fullName>
        <description>Copy 1 of Completed Date needed for reporting</description>
        <formula>Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Concept_Approval_Date__c</fullName>
        <description>Copy 1 of Concept Approval Date needed for reporting</description>
        <formula>Concept_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Concept Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Diagnosis_Ver_Rec_Date__c</fullName>
        <description>Copy 1 of Diagnosis Verification Received Date needed for reporting</description>
        <formula>Diagnosis_Verification_Receive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Diagnosis Ver. Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_End_Date__c</fullName>
        <description>Copy 1 of End Date Needed for Reporting</description>
        <formula>End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Hold_Date__c</fullName>
        <description>Copy 1 of Hold Date Needed for Reporting</description>
        <formula>Hold_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Inactive_Date__c</fullName>
        <description>Copy 1 of Inactive Date Needed for Reporting</description>
        <formula>Inactive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Interview_Date__c</fullName>
        <description>Copy 1 of Interview Date needed for reporting</description>
        <formula>Interview_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Qualified_Date__c</fullName>
        <description>Copy 1 of Qualified Date needed for reporting</description>
        <formula>Qualified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Ready_to_Assign_Date__c</fullName>
        <description>Copy 1 of Ready to Assign Date needed for reporting</description>
        <formula>Ready_to_Assign_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Ready to Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Referral_Date__c</fullName>
        <description>Copy of Referral Date for Reporting</description>
        <formula>Referral_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Start_Date__c</fullName>
        <description>Copy 1 of Start Date Needed for Reporting</description>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Wish_Determined_Date__c</fullName>
        <description>Copy 1 of Wish Determined Date Needed for reporting</description>
        <formula>Wish_Determined_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Wish Determined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Anticipated_Start_Date__c</fullName>
        <description>Copy 2 of Anticipated Start Date Needed for Reporting</description>
        <formula>Anticipated_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Assigned_Date__c</fullName>
        <description>Copy 2 of Assigned Date needed for reporting</description>
        <formula>Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Budget_Approved_Date__c</fullName>
        <description>Copy 2 of Budget Approved Date Needed for Reporting</description>
        <formula>Budget_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Budget Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Closed_Date__c</fullName>
        <description>Copy 2 of Closed Date Needed for Reporting</description>
        <formula>Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Completed_Date__c</fullName>
        <description>Copy 2 of completed date needed for reporting</description>
        <formula>Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Concept_Approval_Date__c</fullName>
        <description>Copy 2 of Concept Approval Date needed for reporting</description>
        <formula>Concept_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Concept Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Diagnosis_Ver_Rec_Dat__c</fullName>
        <description>Copy 2 of Diagnosis Verification Received Date needed for reporting</description>
        <formula>Diagnosis_Verification_Receive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Diagnosis Ver. Rec Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_End_Date__c</fullName>
        <description>Copy 2 of End Date Needed for Reporting</description>
        <formula>End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Hold_Date__c</fullName>
        <description>Copy 2 of Hold Date Needed for Reporting</description>
        <formula>Hold_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Inactive_Date__c</fullName>
        <description>Copy 2 of Inactive Date Needed for Reporting</description>
        <formula>Inactive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Interview_Date__c</fullName>
        <description>Copy 2 of Interview Date needed for reporting</description>
        <formula>Interview_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Qualified_Date__c</fullName>
        <description>Copy 2 of Qualified Date needed for reporting</description>
        <formula>Qualified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Ready_to_Assign_Date__c</fullName>
        <description>Copy 2 of Ready to Assign Date needed for reporting</description>
        <formula>Ready_to_Assign_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Ready to Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Referral_Date__c</fullName>
        <description>Copy of Referral Date needed for reporting</description>
        <formula>Referral_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Start_Date__c</fullName>
        <description>Copy 2 of Start Date Needed for Reporting</description>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_2_Wish_Determined_Date__c</fullName>
        <description>Copy 2 of Wish Determined Date needed for reporting</description>
        <formula>Wish_Determined_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 2 - Wish Determined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Anticipated_Start_Date__c</fullName>
        <description>Copy 3 of Anticipated Start Date Needed for Reporting</description>
        <formula>Anticipated_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Anticipated Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>